# python_project_archive

./: README.md
Dragon Mania Legend Unique Skill Dragon Finder/: Dragon.csv  Unique skilled dragon DML.py
JioSaavnMusicAPI-broken/: README.md  app_gui.py  jiosaavnapi.py
misc_scripts/: csv reader and write to mysql.py  maths_game_guess_and_lose.py  multithreaded_downloader.py  sudo_prompter.py
nasmCompilerDownloader/: UnsupportedOS.py  downloadCompiler.py  pyproject.toml
pattern_finder_gui/: Sequence detector.py  pyproject.toml
